Upgrade to latest helm chart.

--- a/charts/drupal/templates/redis-pvc.yaml
+++ b/charts/drupal/templates/redis-pvc.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.images.redis.enabled }}
+{{- if eq .Values.productionBranch .Values.images.app.tag }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -10,4 +11,5 @@ spec:
   resources:
     requests:
       storage: 1Gi
+{{- end }}
 {{- end }}
