--- a/charts/drupal/templates/app-pvc.yaml
+++ b/charts/drupal/templates/app-pvc.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.productionBranch .Values.images.app.tag }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -9,3 +10,4 @@ spec:
   resources:
     requests:
       storage: 20Gi
+{{- end }}
