--- a/charts/drupal/templates/env.yaml
+++ b/charts/drupal/templates/env.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.productionBranch .Values.images.app.tag }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -15,3 +16,4 @@ data:
     QUANT_SMTP_FROM: "{{ .Values.secrets.smtp.from }}"
     QUANT_SMTP_FROM_NAME: "{{ .Values.secrets.smtp.from_name }}"
     REDIS_HOST: "{{ .Values.secrets.redis.host }}"
+{{- end }}
