--- a/charts/drupal/templates/pull-secret.yaml
+++ b/charts/drupal/templates/pull-secret.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.productionBranch .Values.images.app.tag }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -5,3 +6,4 @@ metadata:
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "quant.imagePullSecretValue" . }}
+{{- end }}
