Container name includes tag.

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -95,7 +95,7 @@ jobs:
         run: |
           kubectl version
           sleep 300
-          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal -- /opt/deployment-scripts/post-deploy.sh
+          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- /opt/deployment-scripts/post-deploy.sh
 
       - name: Clear the QuantCDN caches
         uses: quantcdn/purge-action@v1.2.0
