--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: master
+          ref: main
 
       - name: Set environment for branch
         run: |
