Added PVC to non-prods and split storage amount.

--- a/charts/drupal/values.yaml
+++ b/charts/drupal/values.yaml
@@ -20,6 +20,8 @@ images:
     tag: edge
     port: 80
     sshport: 22
+    storage: 20Gi
+    devstorage: 5Gi
     resources:
       limits:
         cpu: 1500m
