--- a/charts/drupal/templates/app-pvc.yaml
+++ b/charts/drupal/templates/app-pvc.yaml
@@ -1,4 +1,3 @@
-{{- if eq .Values.productionBranch .Values.images.app.tag }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -9,5 +8,8 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 20Gi
-{{- end }}
+      {{- if eq .Values.productionBranch .Values.images.app.tag }}
+      storage: {{ Values.images.drupal.storage }}
+      {{- else }}
+      storage: {{ Values.images.drupal.devstorage }}
+      {{- end }}
