--- a/.github/workflows/branch-delete.yaml
+++ b/.github/workflows/branch-delete.yaml
@@ -25,15 +25,10 @@ jobs:
           echo $BRANCH_NAME
           echo "BRANCH_NAME_CLEAN=$(echo $BRANCH_NAME)" >> $GITHUB_ENV
 
-      - name: Setup kubeconfig
+      - uses: quantcdn/cloud-init-action@v1.0.0
         env:
           SECTION_K8S_API_URL: "${{ secrets.SECTION_K8S_API_URL }}"
           SECTION_API_TOKEN: "${{ secrets.SECTION_API_TOKEN }}"
-        run: |
-          ./ci/init-kube.sh
-          echo 'KUBECONFIG<<EOF' >> $GITHUB_ENV
-          echo $(cat ~/.kube/config | base64) >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
 
       - name: Delete environment from Quant Cloud
         uses: koslib/helm-eks-action@v1.28.0
