--- a/.github/workflows/db-backup.yaml
+++ b/.github/workflows/db-backup.yaml
@@ -10,9 +10,6 @@ jobs:
   backup:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
       -
         name: Create friendly branch name
         run: |
@@ -20,12 +17,10 @@ jobs:
           echo $BRANCH_NAME
           echo "BRANCH_NAME_CLEAN=$(echo $BRANCH_NAME)" >> $GITHUB_ENV
 
-      - name: Setup kubeconfig
+      - uses: quantcdn/cloud-init-action@v1.0.0
         env:
           SECTION_K8S_API_URL: "${{ secrets.SECTION_K8S_API_URL }}"
           SECTION_API_TOKEN: "${{ secrets.SECTION_API_TOKEN }}"
-        run: |
-          ./ci/init-kube.sh
 
       - name: Prepare backup location
         run: |
