--- a/.github/workflows/db-backup.yaml
+++ b/.github/workflows/db-backup.yaml
@@ -35,7 +35,7 @@ jobs:
           DIR: ${{ steps.backup.outputs.dir }}
         run: |
           mkdir -p $DIR
-          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- drush sql:dump > $DIR/$FILENAME
+          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- drush sql:dump --extra-dump=--no-tablespaces > $DIR/$FILENAME
 
       - uses: actions/upload-artifact@v3
         with:
