--- a/.github/workflows/import-database-from-backup.yaml
+++ b/.github/workflows/import-database-from-backup.yaml
@@ -21,24 +21,29 @@ jobs:
         run: exit 1
         if: github.event.inputs.confirm != 'CONFIRM'
 
+      - uses: quantcdn/cloud-init-action@v1.0.0
+        env:
+          SECTION_K8S_API_URL: "${{ secrets.SECTION_K8S_API_URL }}"
+          SECTION_API_TOKEN: "${{ secrets.SECTION_API_TOKEN }}"
+
       -
         name: Create friendly branch name (source)
         run: |
-          SOURCE_BRANCH_NAME=`echo ${{ github.event.inputs.environment }} | tr "[:upper:]" "[:lower:]" | sed "s/[^[:alnum:]-]/-/g"`
+          SOURCE_BRANCH_NAME=`echo ${{ github.event.inputs.environment }}`
+          SOURCE_BRANCH_NAME=`echo ${SOURCE_BRANCH_NAME##*/} | tr "[:upper:]" "[:lower:]" | sed "s/[^[:alnum:]]//g"`
           echo $SOURCE_BRANCH_NAME
           echo "SOURCE_BRANCH_NAME_CLEAN=$(echo $SOURCE_BRANCH_NAME)" >> $GITHUB_ENV
 
       -
         name: Create friendly branch name (destination)
+        env:
+          KUBECONFIG: # Unset
         run: |
-          BRANCH_NAME=`echo $BRANCH_NAME | tr "[:upper:]" "[:lower:]" | sed "s/[^[:alnum:]-]/-/g"`
+          BRANCH_NAME=`echo ${BRANCH_NAME##*/} | tr "[:upper:]" "[:lower:]" | sed "s/[^[:alnum:]]//g"`
           echo $BRANCH_NAME
           echo "BRANCH_NAME_CLEAN=$(echo $BRANCH_NAME)" >> $GITHUB_ENV
-
-      - uses: quantcdn/cloud-init-action@v1.0.0
-        env:
-          SECTION_K8S_API_URL: "${{ secrets.SECTION_K8S_API_URL }}"
-          SECTION_API_TOKEN: "${{ secrets.SECTION_API_TOKEN }}"
+          export POD=`kubectl get pods -o name --no-headers=true | grep "drupal-$BRANCH_NAME" | head -1 | cut -c 5-`
+          echo "DEST_POD=$POD" >> $GITHUB_ENV
 
       - name: Prepare backup location
         run: |
@@ -70,15 +75,14 @@ jobs:
         env:
           KUBECONFIG: # Unset
         run: |
-          export POD=`kubectl get pods -o name --no-headers=true | grep "drupal-${{ env.BRANCH_NAME_CLEAN }}" | cut -c 5-`
           export FILENAME=`find backup/*.sql`
-          kubectl cp $FILENAME $POD:/tmp/db-import.sql --container=drupal-${{ env.BRANCH_NAME_CLEAN }}
+          kubectl cp $FILENAME ${{ env.DEST_POD }}:/tmp/db-import.sql --container=drupal-${{ env.BRANCH_NAME_CLEAN }}
 
       - name: Run the database import
         env:
           KUBECONFIG: # Unset
         run: |
-          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- drush sql:create -y
-          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- sh -c 'mysql -u$MARIADB_USER -h$MARIADB_HOST -p$MARIADB_PASSWORD $MARIADB_DATABASE < /tmp/db-import.sql'
-          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- sh -c 'rm /tmp/db-import.sql'
+          kubectl exec ${{ env.DEST_POD }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- drush sql:create -y
+          kubectl exec ${{ env.DEST_POD }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- sh -c 'mysql -u$MARIADB_USER -h$MARIADB_HOST -p$MARIADB_PASSWORD $MARIADB_DATABASE < /tmp/db-import.sql'
+          kubectl exec ${{ env.DEST_POD }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- sh -c 'rm /tmp/db-import.sql'
 
