--- a/src/composer.json
+++ b/src/composer.json
@@ -102,5 +102,8 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
+    },
+    "require-dev": {
+        "drupal/core-dev": "^10.0"
     }
 }
