--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -1,134 +1,82 @@
-name: Deploy to Quant Cloud
+name: Build and Push Drupal to Quant Cloud
 
 on:
   push:
     branches:
-      - main
       - develop
-      - 'feature/*'
-
-env:
-  REGISTRY: ${{ secrets.CONTAINER_REGISTRY_URL }}
-  IMAGE_NAME: ${{ secrets.CONTAINER_REGISTRY_URL }}/${{ secrets.CONTAINER_REGISTRY_PROJECT_PREFIX }}/${{ secrets.QUANT_PROJECT_ID }}
-  BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+      - main
+    tags:
+      - '*'
 
 concurrency:
-  group: ${{ github.ref }}
+  group: build-and-push-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  build-push:
+  build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    environment:
-      name: Quant Cloud (${{ github.head_ref || github.ref_name }})
-      url: ${{ steps.setup-branch-names.outputs.ENVIRONMENT_URL }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      -
-        name: Create friendly branch name
-        id: setup-branch-names
-        run: |
-          BRANCH_NAME=`echo ${BRANCH_NAME##*/} | tr "[:upper:]" "[:lower:]" | sed "s/[^[:alnum:]]//g"`
-          echo $BRANCH_NAME
-          echo "BRANCH_NAME_CLEAN=$(echo $BRANCH_NAME)" >> $GITHUB_ENV
-          echo "ENVIRONMENT_URL=http://drupal-$BRANCH_NAME.`echo ${{ secrets.QUANT_PROJECT_UUID }} | base64 -d`.apps.quant.cloud" >> $GITHUB_OUTPUT
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      -
-        name: Set production vs. non-production values
+      - name: Set up environment variables
+        id: vars
         run: |
-          if [[ $BRANCH_NAME_CLEAN == 'main' ]]; then
-            echo "MARIADB_USER=${{ secrets.MARIADB_USER }}" >> "$GITHUB_ENV"
-            echo "MARIADB_PASSWORD=${{ secrets.MARIADB_PASSWORD }}" >> "$GITHUB_ENV"
-            echo "MARIADB_DATABASE=${{ secrets.MARIADB_DATABASE }}" >> "$GITHUB_ENV"
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            # For tags, use the tag name
+            TAG=${GITHUB_REF#refs/tags/}
+            echo "suffix=-${TAG}" >> $GITHUB_OUTPUT
+          elif [[ $GITHUB_REF == refs/heads/develop ]]; then
+            # For develop branch, use -staging suffix
+            echo "suffix=-staging" >> $GITHUB_OUTPUT
+            echo "environment=staging" >> $GITHUB_OUTPUT
+          elif [[ $GITHUB_REF == refs/heads/main ]]; then
+            # For master/main branch, use -latest suffix
+            echo "suffix=-latest" >> $GITHUB_OUTPUT
+            echo "environment=production" >> $GITHUB_OUTPUT
           else
-            echo "MARIADB_USER=${{ secrets.MARIADB_USER_DEV }}" >> "$GITHUB_ENV"
-            echo "MARIADB_PASSWORD=${{ secrets.MARIADB_PASSWORD_DEV }}" >> "$GITHUB_ENV"
-            echo "MARIADB_DATABASE=${{ secrets.MARIADB_DATABASE }}_`md5sum<<<$BRANCH_NAME_CLEAN | head -c 8`" >> "$GITHUB_ENV"
+            echo "Error: Unknown branch or tag ref: $GITHUB_REF"
+            exit 1
           fi
 
-      - uses: quantcdn/cloud-init-action@v1.0.0
-        env:
-          SECTION_K8S_API_URL: "${{ secrets.SECTION_K8S_API_URL }}"
-          SECTION_API_TOKEN: "${{ secrets.SECTION_API_TOKEN }}"
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
+      - name: Get ECR Credentials
+        uses: quantcdn/quant-cloud-ecr-action@v1
+        id: ecr-login
         with:
-          registry: ${{ secrets.CONTAINER_REGISTRY_URL }}
-          username: ${{ secrets.CONTAINER_REGISTRY_USER }}
-          password: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
+          api_key: ${{ secrets.QUANT_API_KEY }}
+          organization: ${{ secrets.QUANT_ORGANIZATION }}
 
-      - name: Use buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Login to ECR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ steps.ecr-login.outputs.endpoint }}
+          username: ${{ steps.ecr-login.outputs.username }}
+          password: ${{ steps.ecr-login.outputs.password }}
 
-      - name: Build and push Docker image to Quant Cloud
-        uses: docker/build-push-action@v4
+      - name: Strip protocol from ECR endpoint
+        id: ecr-endpoint-stripped
+        run: |
+          echo "stripped_endpoint=$(echo '${{ steps.ecr-login.outputs.endpoint }}' | sed -E 's|^https?://||')" >> $GITHUB_OUTPUT
+
+      - name: Build and push Drupal image
+        uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.BRANCH_NAME_CLEAN }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: |
+            ${{ steps.ecr-endpoint-stripped.outputs.stripped_endpoint }}/${{ secrets.QUANT_ORGANIZATION }}/${{ secrets.QUANT_APPLICATION }}:drupal${{ steps.vars.outputs.suffix }}
 
-      - name: Deploy to Quant Cloud
-        uses: koslib/helm-eks-action@v1.28.0
-        env:
-          KUBE_CONFIG_DATA: ${{ env.KUBECONFIG }}
+      - name: Redeploy environment
+        uses: quantcdn/quant-cloud-environment-state-action@v1
         with:
-          command: |
-            helm repo add quantcdn https://quantcdn.github.io/helm-charts/ 
-            helm upgrade --install ${{ env.BRANCH_NAME_CLEAN }} \
-              quantcdn/drupal \
-              --version 0.3.17 \
-              --set appVersion="${{ github.sha }}" \
-              --set appEnvironment="${{ env.BRANCH_NAME_CLEAN }}" \
-              --set images.drupal.repository="${{ env.IMAGE_NAME }}" \
-              --set images.app.tag="${{ env.BRANCH_NAME_CLEAN }}" \
-              --set secrets.registry.user='${{ secrets.CONTAINER_REGISTRY_USER }}' \
-              --set secrets.registry.token='${{ secrets.CONTAINER_REGISTRY_TOKEN }}' \
-              --set secrets.database.username="${{ env.MARIADB_USER }}" \
-              --set secrets.database.password="${{ env.MARIADB_PASSWORD }}" \
-              --set secrets.database.database="${{ env.MARIADB_DATABASE }}" \
-              --set secrets.database.host="${{ secrets.MARIADB_HOST }}" \
-              --set secrets.database.port="${{ secrets.MARIADB_PORT }}" \
-              --set secrets.smtp.host="${{ secrets.QUANT_SMTP_HOST }}" \
-              --set secrets.smtp.port="${{ secrets.QUANT_SMTP_PORT }}" \
-              --set secrets.smtp.username="${{ secrets.QUANT_SMTP_USERNAME }}" \
-              --set secrets.smtp.password="${{ secrets.QUANT_SMTP_PASSWORD }}" \
-              --set secrets.smtp.from="${{ secrets.QUANT_SMTP_FROM }}" \
-              --set secrets.smtp.from_name="${{ secrets.QUANT_SMTP_FROM_NAME }}" \
-              --set secrets.authorized_keys="${{ secrets.AUTHORIZED_KEYS }}"
-
-      - name: Run the post-deployment script (non-production)
-        if: ${{ env.BRANCH_NAME_CLEAN != 'main' }}
-        env:
-          KUBECONFIG: # Unset
-        run: |
-          kubectl version
-          sleep 300
-          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- /opt/deployment-scripts/post-deploy-development.sh
-
-      - name: Run the post-deployment script (production)
-        if: ${{ env.BRANCH_NAME_CLEAN == 'main' }}
-        env:
-          KUBECONFIG: # Unset
-        run: |
-          kubectl version
-          sleep 300
-          kubectl exec deploy/drupal-${{ env.BRANCH_NAME_CLEAN }} --container=drupal-${{ env.BRANCH_NAME_CLEAN }} -- /opt/deployment-scripts/post-deploy-production.sh
-
-      - name: Clear the QuantCDN caches
-        uses: quantcdn/purge-action@v1.2.0
-        with:
-          customer: ${{ secrets.QUANT_CUSTOMER_ID }}
-          project: ${{ secrets.QUANT_PROJECT_ID }}
-          token: ${{ secrets.QUANT_TOKEN }}
-          url_pattern: "/*"
+          api_key: ${{ secrets.QUANT_API_KEY }}
+          organization: ${{ secrets.QUANT_ORGANIZATION }}
+          application: ${{ secrets.QUANT_APPLICATION }}
+          environment: ${{ steps.vars.outputs.environment }}
+          action: redeploy
 
