--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: Build and Push Drupal to Public Registry
 on:
   push:
     branches:
-      - master
       - main
+      - develop
     tags:
       - 'v*'
 
@@ -56,6 +56,24 @@ jobs:
             fi
           fi
 
+      - name: Set up image tags
+        id: tags
+        run: |
+          if [[ $GITHUB_REF == refs/heads/develop ]]; then
+            # Develop branch gets dev/edge tags
+            echo "tags<<EOF" >> $GITHUB_OUTPUT
+            echo "ghcr.io/quantcdn-templates/app-drupal:dev" >> $GITHUB_OUTPUT
+            echo "ghcr.io/quantcdn-templates/app-drupal:edge" >> $GITHUB_OUTPUT
+            echo "ghcr.io/quantcdn-templates/app-drupal:v${{ steps.version.outputs.version }}-dev" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+          else
+            # Main branch gets latest and version tags
+            echo "tags<<EOF" >> $GITHUB_OUTPUT
+            echo "ghcr.io/quantcdn-templates/app-drupal:latest" >> $GITHUB_OUTPUT
+            echo "ghcr.io/quantcdn-templates/app-drupal:v${{ steps.version.outputs.version }}" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+          fi
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -69,9 +87,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ghcr.io/quantcdn-templates/app-drupal:latest
-            ghcr.io/quantcdn-templates/app-drupal:v${{ steps.version.outputs.version }}
+          tags: ${{ steps.tags.outputs.tags }}
 
       - name: Test container startup
         run: |
