--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -13,6 +13,13 @@ use_dns_when_possible: true
 composer_version: "2"
 web_environment:
     - QUANT_ENVIRONMENT_TYPE=local
+    - DB_HOST=db
+    - DB_PORT=3306
+    - DB_DATABASE=db
+    - DB_USERNAME=db
+    - DB_PASSWORD=db
+    - REDIS_ENABLED=true
+    - REDIS_HOST=redis
 
 composer_root: src
 corepack_enable: false
