--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
 
     steps:
       - name: Checkout code
@@ -25,7 +25,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Initialize Quant Cloud
-        uses: quantcdn/quant-cloud-init-action@v1.1.3
+        uses: quantcdn/quant-cloud-init-action@v1.1.5
         id: init
         with:
           quant_organization: ${{ secrets.QUANT_ORGANIZATION }}
@@ -35,14 +35,13 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: true
           tags: ${{ steps.init.outputs.stripped_endpoint }}/${{ secrets.QUANT_ORGANIZATION }}/${{ steps.init.outputs.quant_application }}:drupal${{ steps.init.outputs.image_suffix }}
-          cache-from: |
-            type=gha
-            type=registry,ref=ghcr.io/quantcdn-templates/app-drupal:cache
-          cache-to: |
-            type=gha,mode=max
+          build-args: |
+            PHP_VERSION=${{ github.ref == 'refs/heads/develop' && '8.4-dev' || '8.4' }}
+          cache-from: type=gha,scope=app-drupal
+          cache-to: type=gha,mode=max,scope=app-drupal
 
       - name: Create environment if it doesn't exist
         if: ${{ !startsWith(github.ref, 'refs/tags/') && steps.init.outputs.environment_exists == 'false' }}
