--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,10 @@
+# This workflow is used to build and test the Drupal image.
+# It creates the public, default images that can be deployed directly to Quant Cloud.
+# If you wish to customize, you can fork this repository, make modifications, and then
+# use the "build-deploy.yaml" workflow to build and push your own images to Quant Cloud.
+#
+# NOTE: This workflow only runs for the quantcdn-templates organization.
+# If you've forked this repo, this workflow will be skipped automatically.
 name: Build and Push Drupal to Public Registry
 
 on:
@@ -14,7 +21,9 @@ concurrency:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-24.04-arm
+    # Only run for quantcdn-templates organization
+    if: github.repository_owner == 'quantcdn-templates'
+    runs-on: ${{ vars.RUNNER_TYPE || 'ubuntu-latest' }}
     
     steps:
       - name: Checkout code
@@ -27,7 +36,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/arm64
           load: true
           tags: drupal-temp:latest
 
