--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   drupal:
     image: ghcr.io/quantcdn-templates/app-drupal:latest
     build: .
-    #ports:
-    #  - "80:80"
+    ports:
+     - "80:80"
     volumes:
       - ./src/web/sites/default/files:/opt/drupal/web/sites/default/files
     # Database environment variables will be provided by Quant Cloud
