--- a/.ddev/docker-compose.testing.yaml
+++ b/.ddev/docker-compose.testing.yaml
@@ -3,6 +3,7 @@
 services:
   chromedriver:
     image: drupalci/chromedriver:production
+    platform: linux/amd64
     container_name: ddev-${DDEV_SITENAME}-chromedriver
     networks: [default, ddev_default]
     labels:
