--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ on:
     tags:
       - 'v*'
   schedule:
-    # Run weekly on Sunday at midnight UTC to pick up security updates
-    - cron: '0 0 * * 0'
+    # Run daily at midnight UTC to pick up new framework releases
+    - cron: '0 0 * * *'
   workflow_dispatch:
     inputs:
       force_rebuild:
